# language_agnostic_typo_checker

./: .gitignore  README.md
language-agnostic-typo-checker/: pyproject.toml
language-agnostic-typo-checker/check_typos/: command_line.py
project-name/check_typos/: command_line.py
project-name/tests/: test_tool.py
