[tool.poetry]
name = "langugage-agnostic-typo-checker"
version = "0.1.0"
description = ""
authors = ["Robert Howlett <robert@howletts.org.uk>"]
readme = "README.md"
packages = [{include = "check_typos"}]

[tool.poetry.dependencies]
python = "^3.11"
python-Levenshtein =  "0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
check-typos = 'check_typos.command_line:main'

[tool.black]
line-length = 120
